argocd/linkerd-config/linkerd-ingress-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkerd-ingress-gateway
  namespace: linkerd-ingress
  annotations:
    linkerd.io/inject: enabled
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: linkerd-ingress-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkerd-ingress-gateway
  namespace: linkerd-ingress
  labels:
    app: linkerd-ingress-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkerd-ingress-gateway
  template:
    metadata:
      labels:
        app: linkerd-ingress-gateway
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
