argocd/linkerd-config/traefik-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    linkerd.io/inject: enabled
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        linkerd.io/inject: enabled
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure
            - --accesslog
            - --accesslog.filepath=/var/log/traefik/access.log
            - --log
            - --log.filepath=/var/log/traefik/traefik.log
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressclass=traefik
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: traefik-logs
              mountPath: /var/log/traefik
      volumes:
        - name: traefik-logs
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: websecure
    - protocol: TCP
      port: 8080
      name: admin
  selector:
    app: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traocd-ingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /argocd/
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
